Fix word-break in chat-part field

--- a/src/components/messenger/ui/chat-parts/style.scss
+++ b/src/components/messenger/ui/chat-parts/style.scss
@@ -137,5 +137,6 @@
 
   &__text {
     line-height: 20px;
+    word-break: break-word;
   }
 }
